--- a/web/src/pages/Main/styles.scss
+++ b/web/src/pages/Main/styles.scss
@@ -17,6 +17,8 @@
 		.main-center {
 			padding-top: 20px;
 			width: calc(60% - 40px);
+			position: relative;
+			z-index: 9;
 		}
 
 		.main-right {
@@ -49,6 +51,8 @@
 	border-radius: 25px;
 	box-shadow: 0 -1px 2px #474753;
 	border: 1px solid #21242f;
+	position: relative;
+	z-index: 1;
 
 	.main-block-title {
 		display: flex;
